Fixing alignment issues with the moon, clouds, and the godhand

--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -14,8 +14,8 @@
 .moon {
     cursor: pointer;
     border-radius: 50%;
-    width: 25vw;
-    height: 25vw;
+    width: 52vh;
+    height: 52vh;
     position: relative;
     top: -28%;
     z-index: 1;
@@ -23,33 +23,33 @@
 }
 
 .cloudLeft {
-    position: absolute;
-    left: 15%;
-    top: -5%;
-    width: 40%;
-    height: 40%;
+    position: fixed;
+    left: 15vw;
+    top: 5vh;
+    width: 60vh;
+    height: 30vh;
     transition: left 2s ease;
     z-index: 2;
     pointer-events: none;
 }
 
 .cloudRight {
-    position: absolute;
-    right: 5%;
-    top: 20%;
-    width: 55%;
-    height: 45%;
+    position: fixed;
+    right: 15vw;
+    top: 25vh;
+    width: 60vh;
+    height: 30vh;
     transition: right 2s ease;
     z-index: 2;
     pointer-events: none;
 }
 
 .home .moon:hover ~ .cloudRight {
-    right: -20%;
+    right: -20vw;
 }
 
 .home .moon:hover ~ .cloudLeft {
-    left: -10%;
+    left: -10vw;
 }
 
 .home .moon:hover ~ .godHand {
@@ -60,15 +60,22 @@
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
-    bottom: calc(0vh - 80%);
+    bottom: calc(0vh - 70%);
     transition: bottom 2s ease;
     z-index: 1;
     pointer-events: none;
+    height: 100vh; /* Set a fixed height */
+    overflow: hidden; /* Hide overflow */
 }
 
 .godHand img {
     max-width: 100%;
-    max-height: 100%;
+    height: 80%; /* Make image fill the container height */
     width: auto;
-    height: auto;
+    object-fit: cover; /* Maintain aspect ratio */
+    object-position: center top; /* Align image to the top */
+}
+
+.home .moon:hover ~ .godHand {
+    bottom: -40%; /* Adjust this value to show less or more of the hand */
 }
